<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeActivity"
        android:background="#581305">

    <TextView
            android:text="@string/accueil"
            android:layout_width="248dp"
            android:layout_height="63dp"
            android:id="@+id/textView" android:textSize="52sp"
            android:textAlignment="center" android:textStyle="bold"
            android:textColor="@color/cardview_light_background" android:layout_marginTop="88dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/creer_une_partie"
            android:layout_width="305dp"
            android:layout_height="77dp"
            android:id="@+id/createButton" android:textStyle="bold"
            android:textAlignment="center" android:textSize="24sp" android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.491"/>
    <Button
            android:text="@string/rejoindre"
            android:layout_width="305dp"
            android:layout_height="77dp"
            android:id="@+id/joinButton" android:textStyle="bold"
            android:textAlignment="center" android:textSize="24sp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/createButton"
            app:layout_constraintStart_toStartOf="@+id/createButton"
            app:layout_constraintEnd_toEndOf="@+id/createButton"
            app:layout_constraintHorizontal_bias="1.0"/>
    <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@android:drawable/ic_lock_power_off"
            android:id="@+id/decoButton"
            android:tint="@android:color/white" android:background="@color/colorBackground"
            android:scaleType="fitCenter" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/createButton" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/bouton_de_deconnexion"/>
    <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@android:drawable/ic_menu_preferences"
            android:id="@+id/settingButton"
            android:background="@color/colorBackground"
            android:scaleType="fitCenter" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/decoButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="1.0"
            android:tint="@android:color/white" android:contentDescription="@string/bouton_parametres"/>
</android.support.constraint.ConstraintLayout>