<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignInActivity"
        android:background="@color/colorBackground">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/emailContainerIn"
            android:hint="@string/adresse_mail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/passwordContainerIn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textWebEmailAddress"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/passwordContainerIn"
            app:layout_constraintTop_toBottomOf="@+id/emailContainerIn"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/emailContainerIn"
            app:layout_constraintEnd_toEndOf="@+id/emailContainerIn" android:inputType="textPassword"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordContainerIn"
            app:layout_constraintStart_toStartOf="@+id/passwordContainerIn"
            app:layout_constraintEnd_toEndOf="@+id/passwordContainerIn"/>
    <ImageButton
            android:layout_width="80dp"
            android:layout_height="60dp" app:srcCompat="@android:drawable/ic_menu_revert"
            android:id="@+id/returnSignInButton"
            android:background="@color/colorBackground" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:scaleType="fitCenter" android:contentDescription="@string/bouton_retour"/>
</android.support.constraint.ConstraintLayout>