<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JoinActivity"
        android:background="#581305">
    <TextView
            android:text="@string/creer_une_partie"
            android:layout_width="264dp"
            android:layout_height="59dp"
            android:id="@+id/textView3" android:textStyle="bold"
            android:textAlignment="center" android:textColor="@color/cardview_light_background"
            android:textSize="36sp" android:layout_marginTop="76dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/nombre_de_joueurs"
            android:layout_width="279dp"
            android:layout_height="63dp"
            android:id="@+id/textView4" android:textStyle="bold"
            android:textAlignment="center" android:textColor="@color/cardview_light_background"
            android:textSize="24sp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/editText" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"/>
    <EditText
            android:layout_width="313dp"
            android:layout_height="64dp"
            android:inputType="textLongMessage|textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:textColor="@color/cardview_light_background"
            android:hint="@string/nom_de_la_partie"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView3"/>
</android.support.constraint.ConstraintLayout>