<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TutoActivity"
        android:background="@drawable/background3">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="vertical">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="424dp"
                        android:layout_height="66dp" android:id="@+id/rules_title" android:textStyle="bold"
                        android:text="@string/r_gles" android:textSize="36sp" android:textColor="@color/blanc_casse"
                        android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/rules_title_resume"/>
                <TextView
                        android:layout_width="421dp"
                        android:layout_height="wrap_content" android:id="@+id/rules_title_resume"
                        android:textColor="@color/blanc_casse"
                        android:text="@string/Resume_debut" android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintBottom_toTopOf="@+id/rules_role_carte" android:textSize="18sp"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="58dp" android:id="@+id/rules_role_carte"
                        android:textColor="@color/blanc_casse" android:textSize="36sp" android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintBottom_toTopOf="@+id/rules_role_loup" android:layout_marginBottom="32dp"
                        android:textStyle="bold"/>
                <TextView
                        android:text="@string/textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/rules_role_loup"
                        android:textColor="@color/blanc_casse" android:textSize="18sp" android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/rules_role_vilageois"
                        android:layout_marginBottom="24dp"
                        app:layout_constraintHorizontal_bias="0.0"/>
                <TextView
                        android:text="@string/textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/rules_role_vilageois"
                        android:textColor="@color/blanc_casse" android:textSize="18sp" android:textAlignment="center"
                        app:layout_constraintBottom_toTopOf="@+id/rules_role_cupidon"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginBottom="24dp"/>
                <TextView
                        android:text="@string/textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/rules_role_cupidon"
                        android:textColor="@color/blanc_casse" android:textSize="18sp" android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/rules_role_chasseur"
                        android:layout_marginBottom="24dp"/>
                <TextView
                        android:text="@string/textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/rules_role_chasseur"
                        android:textColor="@color/blanc_casse" android:textSize="18sp" android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/rules_role_voyante"
                        android:layout_marginBottom="24dp"/>
                <TextView
                        android:text="@string/textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/rules_role_voyante"
                        android:textColor="@color/blanc_casse" android:textSize="18sp" android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/rules_roles_sorciere"
                        app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="24dp"/>
                <TextView
                        android:text="@string/textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/rules_roles_sorciere"
                        android:textColor="@color/blanc_casse" android:textSize="18sp" android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/rules_roles_ange" android:layout_marginBottom="24dp"/>
                <TextView
                        android:text="@string/textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/rules_roles_ange"
                        android:textColor="@color/blanc_casse" android:textSize="18sp" android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/rules_roles_pipoteur"
                        android:layout_marginBottom="24dp"/>
                <TextView
                        android:text="@string/textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/rules_roles_pipoteur"
                        android:textColor="@color/blanc_casse" android:textSize="18sp" android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="24dp"/>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
